--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        args: >
-          -Dsonar.verbose=true
-        # with:
+        with:
         #   projectBaseDir:
+          args: >
+            -Dsonar.verbose=true          
 
       # - name: DevSkim
       #   uses: microsoft/DevSkim-Action@v1
