--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,14 +20,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: sonarcloud scan
-        uses: sonarsource/sonarcloud-github-action@master
+        run: ./gradlew build jacocoTestReport sonarqube --info
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-        #   projectBaseDir:
-          args: >
-            -Dsonar.verbose=true          
+
 
       # - name: DevSkim
       #   uses: microsoft/DevSkim-Action@v1
