add command to generate metadata

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,8 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           chmod +x ./gradlew
-          ./gradlew build jacocoTestReport sonarqube --info          
+          ./gradlew kaptKotlin
+          ./gradlew build jacocoTestReport sonarqube --info
 
 
       # - name: DevSkim
